--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@amilajack/push-dir",
-  "version": "0.4.1",
+  "version": "0.4.3",
   "description": "Push a directory to a remote branch",
   "keywords": [],
+  "publishConfig": {
+    "access": "public"
+  },
   "contributors": [
     "Ryan Tsao <ryan.j.tsao@gmail.com>",
     "Scott Hardy <scott.the.hardy@gmail.com>"
